style.css
/* ... */
.contact-form textarea[type="message"]{
    text-align: left;
    font-size: 12px;
    color: #252525;
    padding-top: 20px;
    border:none;
    border-bottom: 1.5px solid #252525;
    height: 45%;
    width: 60%;
    justify-content: center;
    margin: auto;
    cursor: pointer;
    transition: .2s ease;
}
.contact-form textarea[type="message"]:focus{
    outline: none;
    font-size: 16px;
    height: 65%;
    width: 70%;
    border-bottom: 2px solid #cadb2d;
}
.contact-form textarea[type="message"]:hover{
    outline: none;
    font-size: 16px;
    border-bottom: 2px solid #cadb2d;
}
.contact-form input[type="submit"]{
    text-align: center;
    vertical-align: middle;
    justify-content: center;
    font-size: 18px;
    color: #252525;
    background-color: white;
    border: 1.5px solid #252525;
    padding: 10px;
    height: 10%;
    width: 50%;
    margin: 12px;
    cursor: pointer;
    transition: .2s ease;
}
.contact-form input[type="submit"]:hover{
    text-align: center;
    font-size: 20px;
    color: white;
    background-color:#cadb2d;
    border-style: none;
    padding: 10px;
    height: 10%;
    width: 60%;
    justify-content: center;
    margin: 12px;
}

/* --------------------------------------------------------------------------|
   --------------------------------------------------------------------------|
   Responsive Grid Images (First time using ChatGPT for examples!)
   --------------------------------------------------------------------------|
   --------------------------------------------------------------------------|
*/

  .image-grid {
    display: grid;
    grid-gap: 10px;
    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
    grid-auto-rows: 250px;
    grid-auto-flow: dense;
    margin:12px;
    position:relative;
  }

  .shrink {
    transition: 1s ease;
    opacity: 1;
    }
    
    .shrink:hover{
    -webkit-transform: scale(0.95);
    -ms-transform: scale(0.95);
    transform: scale(0.95);
    transition: .4s ease;
    cursor:pointer;
    opacity: 0.4;
    }
  
.grid-item {
    grid-column: span 1;
    grid-row: span 1;
    position: relative;
  }
  
.grid-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    
  }
  .grid-item video {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

.grid-item-wide{
    grid-column: span 2;
    grid-row: span 1;
    position: relative;
}

.grid-item-wide img{
  width: 100%;
  height: 100%;
  object-fit: cover;
  backface-visibility: hidden;
  display: block;
}

.grid-item-tall {
    grid-column: span 1;
    grid-row: span 2;
    position: relative;
}

.grid-item-tall img{
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.grid-item-big {
    grid-column: span 2;
    grid-row: span 2;
    position: relative;
}

.grid-item-big img{
  width: 100%;
  height: 100%;
  object-fit: cover;
}

/* --------------------------------------------------------------------------|
   --------------------------------------------------------------------------|
   Reveal Text about Image (Project) on Hover
   --------------------------------------------------------------------------|
   --------------------------------------------------------------------------|
*/


.image-overlay{
    position: absolute;
    top: 0;
    left: 0;
    width:100%;
    height: 100%;
    background-color: rgba(0,0,0,0.6);
    color:white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    opacity: 0;
    transition: 0.25s ease;
    cursor: pointer;
}
.image-overlay > * {
    transform: translateY(20px);
    transition: transform 0.25s;
}
.image-overlay:hover{
    opacity: 1;
}
.image-overlay:hover > * {
    transform: translateY(0);
}
.overlay-title{
    font-size: 2em;
    font-weight: bold;
    cursor: pointer;
    margin-left:12px;
    margin-right:12px;
}
.overlay-description{
    font-size: 1.25em;
    margin-top: 0.25em;
    margin-right: 0.75em;
    margin-left: 0.75em;
    color: white;
    cursor: pointer;
}


/* --------------------------------------------------------------------------|
   --------------------------------------------------------------------------|
   Modal 'pop-ups' for sharing project information.

   The idea is to have create less pages and instead share project info 
   with modals- occasionally linking to a separate page for more experimental
   projects.
   --------------------------------------------------------------------------|
   --------------------------------------------------------------------------|
*/

.modalDialog {
	position: fixed;
    height: 100%;
	font-family: Proxima Nova, sans-serif;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	/*background: rgba(217, 250, 53, 0.8);*/
    background-color: rgba(0,0,0,0.8);
	z-index: 99999;
	opacity:0;
	-webkit-transition: opacity 200ms ease-in;
	-moz-transition: opacity 200ms ease-in;
	transition: opacity 200ms ease-in;
	pointer-events: none;
    overflow: scroll;
}

.modalDialog:target {
	opacity:1;
	pointer-events: auto;
}

.modalDialog > div {
	width: 90%;
    min-height: 90%;
	position: relative;
    overflow: scroll;
    margin-left: 5%;
    margin-top: 5%;
    display: flexbox;
	background:white;
}

.modal-heading {
    margin: auto;
    padding:24px;
    justify-content: center;
    display: flex;
    background-color:#cadb2d;
}
.modal-text {
    padding-left: 12px;
    padding-right: 12px;
}

.close {
  padding: 0;
	color:#252525;
	line-height: 25px;
	position: absolute;
	right: 15px;
	text-align: center;
	top: 10px;
	width: 24px;
	text-decoration: none;
  background:none;
	font-weight: bold;
    font-size: 40px;
}

.close:hover { 
color: #4766af;
}

.animations-modal-content video{
    width:85%;
    height:auto;
    justify-content: center;
    margin: auto;
    padding: 12px;
    display: block;
}
/* ... */

